--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.5",
-    "react-native-gesture-handler": "1.4.0",
-    "react-navigation": "3.12.0",
+    "react-native-gesture-handler": "^1.4.0",
+    "react-navigation": "^3.12.0",
     "styled-components": "4.3.2"
   },
   "devDependencies": {
