--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "axios": "0.19.0",
+    "axios": "^0.19.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.12.0",
     "styled-components": "4.3.2"
   },
